# app/Doc/V1/Shipper/ShipperAreaController.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Doc\V1\Shipper;
+
+/**
+ 
+ * 
+ * @OA\Get(
+ * path="/api/v1/shipper/area", 
+ * tags={"Shipper"},
+ * @OA\Response(response=200, description="", @OA\JsonContent()),
+ * )
+ */
+
+class ShipperAreaController
+{
+    
+}
