# app/Doc/V1/Shipper/ShipperTrackingController.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Doc\V1\Shipper;
+
+/**
+ 
+ * 
+ * @OA\Get(
+ * path="/api/v1/shipper/tracking", 
+ * tags={"Shipper"},
+ * @OA\Response(response=200, description="", @OA\JsonContent()),
+ * )
+ */
+
+class ShipperTrackingController
+{
+}
